// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="Shell"
>
  <Container
    fluid={false}
  >
    <div
      className="ShellHeader"
    >
      <Row>
        <Col>
          <Navbar
            collapseOnSelect={false}
            expand={true}
            variant="light"
          >
            <NavbarBrand>
              <Logo
                size={50}
              />
            </NavbarBrand>
          </Navbar>
        </Col>
      </Row>
    </div>
    <div
      className="ShellContent"
    >
      <Row>
        <Col>
          <p>
            Some text
          </p>
          <a
            href="https://logion.network/"
          >
            A link
          </a>
        </Col>
      </Row>
    </div>
  </Container>
</div>
`;

exports[`renders with custom background 1`] = `
<div
  className="Shell"
  style={
    Object {
      "background": "linear-gradient(to right, #a158ff, 90%, #203acf)",
    }
  }
>
  <Container
    fluid={false}
  >
    <div
      className="ShellHeader"
    >
      <Row>
        <Col>
          <Navbar
            collapseOnSelect={false}
            expand={true}
            variant="light"
          >
            <NavbarBrand>
              <Logo
                size={50}
              />
            </NavbarBrand>
          </Navbar>
        </Col>
      </Row>
    </div>
    <div
      className="ShellContent"
    >
      <Row>
        <Col>
          <p>
            Some text
          </p>
          <a
            href="https://logion.network/"
          >
            A link
          </a>
        </Col>
      </Row>
    </div>
  </Container>
</div>
`;
